--- a/client/global.css
+++ b/client/global.css
@@ -123,12 +123,12 @@
   ::-webkit-scrollbar-thumb {
     background-color: #d4943a; /* bronze-500 */
     border-radius: 9999px;
-    border: 3px solid transparent;
+    border: 8px solid transparent;
     background-clip: content-box;
   }
   /* Firefox */
   * {
-    scrollbar-width: thin;
+    scrollbar-width: auto;
     scrollbar-color: #d4943a transparent;
   }
 
